ArrayBase class done.

--- a/GAME2001_A1/GAME2001_A1.vcxproj
+++ b/GAME2001_A1/GAME2001_A1.vcxproj
@@ -129,6 +129,11 @@
   <ItemGroup>
     <ClCompile Include="GAME2001_A1.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ArrayBase.h" />
+    <ClInclude Include="OrderedArray.h" />
+    <ClInclude Include="UnorderedArray.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
